# sismo2

./: .gitignore  CMakeLists.txt  Fault.cpp  Fault.hpp  ODE.cpp  ODE.hpp  README  README.md  Surface_response.hpp  main.cpp  param.hpp  read_Green_matrix.hpp  test_EDO_simple.cpp  test_code_direct_simple.cpp  variables.cpp  variables.hpp  visualisation.py
